# NDR_Detection_Classifiers

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README_Detection_Common.md  README_Detection_Manager.md  Sample_Debug_output.txt  aggresive_scan.txt  anomalous_tcp_scan.txt  db_api_scan.txt  detection_common.hpp  detection_manager.cpp  detection_manager.hpp  discovery_protocol_abuse.txt  established_smbv1.txt  full_connect_scan.txt  ics_mgmt_scan.txt  ip_protocol_scan.txt  port_sweep.txt  readme_detection_common.txt  smbv1_targeted_activity.txt  syn_scan.txt  udp_app_scan.txt  vcpkg.json
aggresive_scan/: metadata.json  query.sql
anomalous_tcp_scan/: metadata.json  query.sql
db_api_scan/: metadata.json  query.sql
detection_rules/InvalidFileStruc/: metadata.json
detection_rules/Missingmeta/: query.sql
detection_rules/Missingmeta/InvalidJSON/: metadata.json
detection_rules/aggresive_scan/: metadata.json  query.sql
detection_rules/anomalous_tcp_scan/: metadata.json  query.sql
detection_rules/db_api_scan/: metadata.json  query.sql
detection_rules/discovery_protocol_abuse/: metadata.json  query.sql
detection_rules/established_smbv1/: metadata.json  query.sql
detection_rules/full_connect_scan/: metadata.json  query.sql
detection_rules/ics_mgmt_scan/: metadata.json  query.sql
detection_rules/invalid_JSON/: meta.json  query.sql
detection_rules/ip_protocol_scan/: metadata.json  query.sql
detection_rules/port_sweep/: metadata.json  query.sql
detection_rules/smbv1_targeted_activity/: metadata.json  query.sql
detection_rules/syn_scan/: metadata.json  query.sql
detection_rules/udp_app_scan/: metadata.json  query.sql
discovery_protocol_abuse/: metadata.json  query.sql
established_smbv1/: metadata.json  query.sql
full_connect_scan/: metadata.json  query.sql
ics_mgmt_scan/: metadata.json  query.sql
ip_protocol_scan/: metadata.json  query.sql
port_sweep/: metadata.json  query.sql
smbv1_targeted_activity/: metadata.json  query.sql
syn_scan/: metadata.json  query.sql
udp_app_scan/: metadata.json  query.sql
